Add env MacOS and Windows
Close #10

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
   Test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, macos-latest, windows-latest]
     services:
       vernemq:
         image: vernemq/vernemq:latest-alpine
