--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,18 +12,9 @@ jobs:
   Test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     name: Test
     runs-on: ${{ matrix.os }}
-    services:
-      vernemq:
-        image: vernemq/vernemq:latest-alpine
-        ports:
-          - "1883:1883"
-        env:
-          DOCKER_VERNEMQ_USER_foo: bar
-          DOCKER_VERNEMQ_ACCEPT_EULA: yes
-
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
