Install golangci-lint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
 
-      - name: Run Unit tests.
-        run: make test-coverage
+      - name: Install golangci-lint on ubuntu and windows
+        if: maxtrix.os == 'ubuntu-latest' or matrix.os == 'windows-latest'
+          run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
 
-      - name: Install golangci-lint
-        run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
+      - name: Install golangci-lint on MacOS
+        if: maxtrix.os == 'macos-latest'
+          run: brew install golangci/tap/golangci-lint
 
       - name: Run golangci-lint
         run: $(go env GOPATH)/bin/golangci-lint run ./...
+
+      - name: Run Unit tests.
+        run: make test-coverage
+
