--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,11 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install golangci-lint on ubuntu and windows
-        if: ${{ maxtrix.os == 'ubuntu-latest' or matrix.os == 'windows-latest' }}
+        if: ${{ maxtrix.os }} == 'ubuntu-latest' or ${{ matrix.os }} == 'windows-latest'
         run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
 
       - name: Install golangci-lint on MacOS
-        if: ${{ maxtrix.os == 'macos-latest' }}
+        if: ${{ maxtrix.os }} == 'macos-latest'
         run: brew install golangci/tap/golangci-lint
 
       - name: Run golangci-lint
