--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
 
-      - name: Install golangci-lint
-        run: | 
-         if [ "$RUNNER_OS" == "Linux" ] ||  [ "$RUNNER_OS" == "Windows" ]; then
-              curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
-         else
-              brew install golangci/tap/golangci-lint
-         fi
-
-      - name: Run golangci-lint
-        run: $(go env GOPATH)/bin/golangci-lint run ./...
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v1
+        with:
+          version: v1.26
 
       - name: Run Unit tests.
         run: make test-coverage
