--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,10 @@ on:
 
 jobs:
 
-  Test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    name: Test
-    runs-on: ${{ matrix.os }}
+  Lint:
+    runs-on: ubuntu-latest
+    name: Lint
     steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.14
-        id: go
-
       - name: Checkout code
         uses: actions/checkout@v1
 
@@ -29,6 +20,13 @@ jobs:
         uses: golangci/golangci-lint-action@v1
         with:
           version: v1.26
+  Test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Test
+    runs-on: ${{ matrix.os }}
+    steps:
 
       - name: Run Unit tests.
         run: make test-coverage
