--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,33 +9,29 @@ on:
 
 jobs:
 
-  Test:
-    name: Test
+  Lint:
     runs-on: ubuntu-latest
-    services:
-      vernemq:
-        image: vernemq/vernemq:latest-alpine
-        ports:
-          - "1883:1883"
-        env:
-          DOCKER_VERNEMQ_USER_foo: bar
-          DOCKER_VERNEMQ_ACCEPT_EULA: yes
-
+    name: Lint
     steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.14
-        id: go
+      - name: Checkout code
+        uses: actions/checkout@v1
 
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v1
+        with:
+          version: v1.26
+  Test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Test
+    runs-on: ${{ matrix.os }}
+    steps:
       - name: Checkout code
         uses: actions/checkout@v1
 
       - name: Run Unit tests.
         run: make test-coverage
+        env:
+          MQTT_TEST_SERVER: ${{ secrets.MQTT_TEST_SERVER }}
 
-      - name: Install golangci-lint
-        run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
-
-      - name: Run golangci-lint
-        run: $(go env GOPATH)/bin/golangci-lint run ./...
