--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Run Unit tests.
-        run: make test-coverage
+        run: make test
         env:
           MQTT_TEST_SERVER: ${{ secrets.MQTT_TEST_SERVER }}
 
