--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,29 @@ jobs:
         with:
           version: v1.26
   Test:
+    runs-on: ubuntu-latest
+    services:
+      vernemq:
+        image: vernemq/vernemq:latest-alpine
+        ports:
+          - "1883:1883"
+        env:
+          DOCKER_VERNEMQ_USER_foo: bar
+          DOCKER_VERNEMQ_ACCEPT_EULA: yes
+    name: Test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Run Unit tests.
+        run: make test-coverage
+        env:
+          MQTT_TEST_SERVER: mqtt://foo:bar@vernemq:1883
+
+  Test-without-MQTT:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    name: Test
+        os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -33,5 +52,4 @@ jobs:
       - name: Run Unit tests.
         run: make test-coverage
         env:
-          MQTT_TEST_SERVER: ${{ secrets.MQTT_TEST_SERVER }}
-
+          EXCLUDE_MQTT: true
