--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run Unit tests.
         run: make test-coverage
         env:
-          MQTT_TEST_SERVER: mqtt://foo:bar@vernemq:1883
+          MQTT_TEST_SERVER: mqtt://foo:bar@localhost:1883
 
   Test-without-MQTT:
     strategy:
