--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,6 +6,7 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
+      - BIZFLY_BACKUP_VERSION="v{{.Version}}"
     goos:
       - linux
       - windows
