--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,18 @@ jobs:
         with:
           version: v1.26
   Test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        os: [macos-latest, windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     name: Test
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+
       - name: Checkout code
         uses: actions/checkout@v1
 
@@ -33,9 +42,15 @@ jobs:
   Test-without-MQTT:
     strategy:
       matrix:
+        go-version: [1.16.x]
         os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+          
       - name: Checkout code
         uses: actions/checkout@v1
 
