--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,17 @@ on:
 jobs:
 
   Lint:
+    strategy:
+      matrix:
+        go-version: [1.16.x]
     runs-on: ubuntu-latest
     name: Lint
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+          
       - name: Checkout code
         uses: actions/checkout@v1
 
