--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,20 @@ on:
 jobs:
 
   Lint:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     name: Lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
+
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
 
       - name: Install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.41.1
@@ -22,25 +31,18 @@ jobs:
       - name: Run golangci-lint
         run: $(go env GOPATH)/bin/golangci-lint run ./...
 
-  Test:
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    name: Test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-
-      - name: Run Unit tests.
-        run: make test-coverage
-
   Test-without-MQTT:
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        go-version: [1.16.x]
+        os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+          
       - name: Checkout code
         uses: actions/checkout@v1
 
