--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           go-version: 1.16
 
       - name: Validates GO releaser config
-        uses: docker://goreleaser/goreleaser:latest
+        uses: goreleaser/goreleaser-action@v2
         with:
           args: check
       - name: Create release on GitHub
