add limit upload and limit download

--- a/conf/agent.yaml
+++ b/conf/agent.yaml
@@ -3,3 +3,5 @@ access_key: <Access Key>
 secret_key: <Secret Key>
 api_url: <API URL> 
 
+limit_upload: <Upload KiB>
+limit_download: <Download KiB>
