feat/change-server-logic-to-tcp

--- a/conf/agent.yaml
+++ b/conf/agent.yaml
@@ -1,7 +1,9 @@
 machine_id: foo
 access_key: <Access Key>
 secret_key: <Secret Key>
-api_url: <API URL> 
+api_url: <API URL>
 
 limit_upload: <Upload KiB>
 limit_download: <Download KiB>
+
+port: <Service port>
