--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,8 @@ builds:
     ignore:
       - goos: darwin
         goarch: 386
+      - goos: windows
+        goarch: arm64
     ldflags:
       - -X github.com/bizflycloud/bizfly-backup/cmd.version={{ .Version }}
       - -X github.com/bizflycloud/bizfly-backup/cmd.gitCommit={{ .ShortCommit }}
